modefied: 首页焦点图和单机游戏推荐模块联调

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <meta name="referrer" content="never">
   
     
     <title>王牌军游戏mod资源网</title>
